# gans-research

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base_config.yaml  cgan.yaml  dcgan.yaml  prog_gan.yaml  progressive_gan.yaml  stylegan1.yaml  stylegan2.yaml  stylegan3.yaml  vanilla_gan.yaml  wgan.yaml  wgan_gp.yaml
data/: dataloader.py
evaluation/: __init__.py
evaluation/metrics/: __init__.py  fid.py
evaluation/visualization/: grid_visualization.py
experiments/: evaluate.py  inference.py
experiments/stage1_basic/: train_dcgan.py  train_vanilla_gan.py
experiments/stage2_stability/: train_wgan.py  train_wgan_gp.py
experiments/stage3_conditional/: train_cgan.py
experiments/stage4_highquality/: train_prog_gan.py
models/base/: __init__.py  base_discriminator.py  base_gan.py  base_generator.py
models/vanilla_gan/: __init__.py  discriminator.py  generator.py
notebooks/: plot.ipynb
src/data/: data_utils.py  dataloader.py
src/losses/: __init__.py  base_gan_loss.py  prog_gan_loss.py  vanilla_gan_loss.py  wgan_gp_loss.py  wgan_loss.py
src/metrics/: coverage.py  fid.py  quality.py
src/models/: __init__.py
src/models/base/: __init__.py  base_discriminator.py  base_gan.py  base_generator.py
src/models/cgan/: __init__.py  discriminator.py  generator.py
src/models/wgan/: __init__.py  (+2 more)
src/training/: __init__.py  trainer.py
src/utils/: __init__.py  feature_extraction.py  grid_visualization.py  set_experiment.py  visualization.py
src/visualization/: grid_visualization.py
training/: trainer.py
training/losses/: gan_loss.py
(+14 files in other folders)
